--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "antd": "^5.2.3",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
     "@types/node": "^18.14.4",
