--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "antd": "^5.2.3",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2"
@@ -20,6 +22,7 @@
     "@types/node": "^18.14.4",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/lodash": "^4.14.191",
     "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
