--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rematch/core": "^2.2.0",
     "antd": "^5.2.3",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
@@ -16,13 +17,15 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.4",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/lodash": "^4.14.191",
     "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
