--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
@@ -25,6 +26,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.4",
     "@types/react": "^18.0.27",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.58.3",
