--- a/env.example
+++ b/env.example
@@ -1,3 +1,2 @@
-VITE_SERVER_DOMAIN=
-VITE_GITHUB_OAUTH_CLIENT_ID={github-oauth-client_id}
-VITE_GITHUB_OAUTH_REDIRECT_URL={your.domain}/auth/github/callback
+VITE_BASENAME=
+VITE_GITHUB_OAUTH_CLIENT_ID=
