--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
+    "echarts": "^5.4.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
