--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.2",
+    "highlight.js": "^11.7.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "redux": "^4.2.1"
