--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,3 +1,7 @@
+upstream backend {
+  server localhost:3000;
+}
+
 server {
 
   listen 80;
@@ -12,5 +16,16 @@ server {
 
   location = /50x.html {
     root   /usr/share/nginx/html;
+  }
+
+  location /api {
+    proxy_set_header   Host            $http_host;
+    proxy_set_header   Upgrade         $http_upgrade;
+    proxy_set_header   Connection      "upgrade";
+    proxy_set_header   X-Real-IP       $remote_addr;
+    proxy_set_header   X-NginX-Proxy   true;
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_redirect     off;
+    proxy_pass         http://backend;
   }
 }
