--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,7 +1,3 @@
-upstream backend {
-  server 0.0.0.0:3000;
-}
-
 server {
 
   listen 80;
@@ -26,6 +22,6 @@ server {
     proxy_set_header   X-NginX-Proxy   true;
     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_redirect     off;
-    proxy_pass         http://backend;
+    proxy_pass         http://127.0.0.1:3000/;
   }
 }
